--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,7 @@ dependencies {
     compile 'com.android.support:percent:24.1.1'
     compile 'com.android.support:recyclerview-v7:24.1.1'
 
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+
     testCompile 'junit:junit:4.12'
 }
