--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 24
@@ -32,7 +33,8 @@ dependencies {
     compile 'com.android.support:percent:24.1.1'
     compile 'com.android.support:recyclerview-v7:24.1.1'
 
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.jakewharton:butterknife:8.2.1'
+    apt 'com.jakewharton:butterknife-compiler:8.2.1'
 
     testCompile 'junit:junit:4.12'
 }
