--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,13 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-        </activity>
-        <activity android:name=".DetailsActivity"></activity>
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".DetailsActivity" />
         <activity android:name=".SourcesActivity">
+        </activity>
+        <activity android:name=".SwipeHomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
